--- a/peerreview.html
+++ b/peerreview.html
@@ -8,17 +8,17 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>Accessible Design Homepage</title>
+  <title>Peer Review Page</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
   <!-- Custom styles for this template -->
-  <link href="css/scrolling-nav.css" rel="stylesheet">
+  <link href="css/blog-post.css" rel="stylesheet">
 
 </head>
 
-<body id="page-top">
+<body>
 
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
@@ -29,9 +29,8 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
-          <li class="nav-item active">
+          <li class="nav-item">
             <a class="nav-link" href="index.html">Home
-              <span class="sr-only">(current)</span>
             </a>
           </li>
           <li class="nav-item">
@@ -43,36 +42,39 @@
           <li class="nav-item">
             <a class="nav-link" href="coding.html">Coding for Accesible Design</a>
           </li>
-          <li class="nav-item">
+          <li class="nav-item active">
             <a class="nav-link" href="peerreview.html">Peer Review</a>
+            <span class="sr-only">(current)</span>
           </li>
         </ul>
       </div>
     </div>
   </nav>
 
-  <header class="bg-primary text-white">
-    <div class="container text-center">
-      <h1>Welcome to Wiki Resources Project 7</h1>
-      <p class="lead">This website is focused on creating websites which are accessible by all groups of people.</p>
-    </div>
-  </header>
+  <!-- Page Content -->
+  <div class="container">
 
-  <section id="about">
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-8 mx-auto">
-          <h2>Acceible Design Choices</h2>
-          <p class="lead">Accessible Design is made up of three main areas:</p>
-          <ul>
-            <li><a href="auditorydesign.html"Auditory Design>Auditory Design</a></li>
-            <li><a href="visualdesign.html"Viual Design>Visual Design</li>
-            <li><a href="coding.html"Coding Choices>Coding Choices</li>
-          </ul>
-        </div>
+    <div class="row">
+
+      <!-- Post Content Column -->
+      <div class="col-lg-8">
+
+        <!-- Title -->
+        <h1 class="mt-4">Peer Review</h1>
+        <hr>
+
+        <!-- Post Content -->
+        <p>	In the feedback that we received for our Wiki Page presentation, there were many good things that were said about our Wiki Page plans. Everyone who peer reviewed the presentation said that they though our chosen topic was creative, interesting, and relevant to CCI students. They also stated that our presentation was engaging and informative and that we made sure to cover all of the important aspects of our proposal. The peer reviewers also said that they believed our policy for group presentation was adequate and that we did a good job with splitting up the work equally. One thing that a peer reviewer suggested that we change was our timeline. They said that we had a whole month unaccounted for and that we should look to start working on the Wiki Page sooner so that we do not feel rushed or stressed out towards the end of April. After reading that suggestion, we decided to start our research for our topics earlier so that all we would have to worry about was creating the actual page itself.</p>
+
       </div>
+
+      <!-- Sidebar Widgets Column -->
+    
     </div>
-  </section>
+    <!-- /.row -->
+
+  </div>
+  <!-- /.container -->
 
   <!-- Footer -->
   <footer class="py-5 bg-dark">
@@ -85,12 +87,6 @@
   <!-- Bootstrap core JavaScript -->
   <script src="vendor/jquery/jquery.min.js"></script>
   <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-
-  <!-- Plugin JavaScript -->
-  <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
-
-  <!-- Custom JavaScript for this theme -->
-  <script src="js/scrolling-nav.js"></script>
 
 </body>
 
