--- a/auditorydesign.html
+++ b/auditorydesign.html
@@ -33,7 +33,7 @@
             <a class="nav-link" href="index.html">Home
             </a>
           </li>
-          <li class="nav-item">
+          <li class="nav-item active">
             <a class="nav-link active" href="auditorydesign.html">Auditory Design</a>
             <span class="sr-only">(current)</span>
           </li>
@@ -42,6 +42,9 @@
           </li>
           <li class="nav-item">
             <a class="nav-link" href="coding.html">Coding for Accesible Design</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="peerreview.html">Peer Review</a>
           </li>
         </ul>
       </div>
