--- a/coding.html
+++ b/coding.html
@@ -43,6 +43,9 @@
             <a class="nav-link" href="coding.html">Coding for Accesible Design</a>
             <span class="sr-only">(current)</span>
           </li>
+          <li class="nav-item active">
+            <a class="nav-link" href="peerreview.html">Peer Review</a>
+          </li>
         </ul>
       </div>
     </div>
