--- a/visualdesign.html
+++ b/visualdesign.html
@@ -43,6 +43,9 @@
           <li class="nav-item">
             <a class="nav-link" href="coding.html">Coding for Accesible Design</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="peerreview.html">Peer Review</a>
+          </li>
         </ul>
       </div>
     </div>
